2007-06-22  Akim Demaille  <demaille@gostai.com>

	taggedcommand == command
	* src/parser/bison/ugrammar.y (taggedcommand): Remove, use only
	command.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	Merge name and purevariable
	* src/parser/bison/ugrammar.y (name): Accept what purevariable
	used to accept.
	(purevariable): Remove.
	All users changed to use name instead.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	* src/parser/bison/ugrammar.y: Formatting changes.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	* src/parser/bison/ugrammar.y: Formatting changes.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	Simplify raw_arguments handling
	* src/parser/bison/ugrammar.y (raw_argument): New.
	(rawargument): Rename as...
	(raw_arguments): this.
	Now accept no raw_argument at all.
	Adjust uses.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	* src/parser/bison/ugrammar.y (class_declaration): Accept complex var names.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	* src/parser/bison/ugrammar.y: Throw the parser actions away.
	They clutter the file.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	Fix previous fix checkin
	* src/parser/bison/ugrammar.y (identifiers): Accept "var" where
	appropriate...

2007-06-22  Akim Demaille  <demaille@gostai.com>

	Fix and comment
	* src/parser/bison/ugrammar.y (identifiers): More comments.
	Always accept "var".

2007-06-22  Akim Demaille  <demaille@gostai.com>

	parser: name, identifiers
	* src/parser/bison/ugrammar.y (identifiers): Fix its definition
	that allowed trailing commas.
	(var.opt, identifiers.1): New.
	(name, formal_arguments): New.
	Use them to factor function and event declarations/definitions.
	Note that we break backward compatibility here, since now
	formal_arguments can no longer be empty.  This is because it
	simplifies the task for now.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	Renamings
	* src/parser/bison/ugrammar.y (ustring): Remove, useless currently.